--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Godoc GOOS GOARCH",
-  "description": "This extension makes changing GOOS and GOARCH params in godoc",
-  "version": "1.1",
+  "description": "Makes it easy to set GOOS and GOARCH params in godoc",
+  "version": "1.2",
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Set godoc params"
